//it's lazy updated file, so the real ChangeLog is the activity on github

+ os2:: single application mode
* so2:: tea-qmake.pro is destined to Qt5 now
* single application mode - fixed on UNIX/Win

* fixes cmake file for install icons and desktop file
* OS/2 fix

* cmake's make dist creates tarball with dirname as at github, i.e. tea-qt-<ver>

+ Tune::UI Mode:: Classic/Docked

- Tune::Interface::Override locale
+ Tune::Interface::UI Language list

* CMake:: TEA QML stuff is disabled by default.
  To enable:
  cmake -DUSE_QML=True 

* Meson::
  QML stuff is disabled

* Text to HTML - fixed
* drag and drop - fixed

* Nav - Prev/Next tab, now circled
+ Tune - Interface :: new, simplified font selectors (also workaround of Qt 5.13 font bug)

+ Fm - Checksum menu
+ Fm - Checksum menu - MD4, MD5, SHA1, SHA 224, all SHA-2, 3, Keccak

+ Functions - Text - Anagram
+ Tune::Common - Use Enca for charset detection
Enca binary can be used to detect encoding. TEA's own detection engine works with Russian/Ukrainian charsets,
so Enca is the better option, when installed.
+ UTF-8 detection has been improved

+ When open the recent file, editor tab is activated

* qt4 compilation fix

* "search in files" results window close automatically with TEA
* main windows destructor FIX //using deleteLater()

* logmemo is scriptable again
+ Objective C support (hl, header/source switch)
* Qt 4.x fix

+ "Nav - Toggle header/source" moved to IDE menu

+ --m TEA command line option to enable multiply instance mode
+ Prg menu:: Run program, Build program, Clean program

+ Tune :: Logmemo font settings
+ Profile saves logmemo and GUI font settings
+ meson/ninja build system support
* quazip fixes

+ Tune::Common:: Syntax highlighting enabled - turn on/off syntax hl globally (useful
for large documents on slow machines)

2018 jul
45.0.2 - BSD fix
45.0.1 - MacOS fix

2018 jan
+ recent list and bookmarks saves the word wrap

2017 nov
* desktop/icons stuff fixes


2017 july