@@ -1,5 +1,7 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
++ Functions - Sort - Sort by length
+
 + os2:: single application mode
 * so2:: tea-qmake.pro is destined to Qt5 now
 * single application mode - fixed on UNIX/Win
